--- a/config.gradle
+++ b/config.gradle
@@ -54,6 +54,7 @@ ext {
             rxandroid               :"3.0.0",
             rxlife                  :"2.2.2",
 
+            glide                   :"4.13.2"
     ]
 
     dependencies = [
@@ -99,6 +100,9 @@ ext {
             rxjava                          :"io.reactivex.rxjava3:rxjava:${versions["rxjava"]}",
             rxandroid                       :"io.reactivex.rxjava3:rxandroid:${versions["rxandroid"]}",
             rxlife                          :"com.github.liujingxing.rxlife:rxlife-rxjava3:${versions["rxlife"]}",
+
+            glide                           :"com.github.bumptech.glide:glide:${versions["glide"]}",
+            glide_compiler                  :"com.github.bumptech.glide:compiler:${versions["glide"]}",
 
     ]
 
